       results, with an informational sidebar that may show interesting bits
       about an image.
     * Cover fetcher: Added ability to enter custom queries via web search (in
       addition to Lasf.Fm).

  CHANGES:
     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 

  BUGFIXES:
     * Cover fetcher: Fixed a crash involving reappearing cover found dialogs
       and pending cover fetches. (BR 230215)
     * Display tooltips with applet names in the context toolbar. (BR 230736)
     * File browser: "Add to Playlist" doesn't add playlist files to the playlist.
       (BR 229290)


VERSION 2.3
  FEATURES:
    * Podcast channels and episodes can be dragged to add them to other
      providers. (BR 195704)
    * Track action buttons are now available in the label for the current track.
    * Bookmark button is now available in the Current Track applet.

  CHANGES:
    * When a podcast episode is no longer shown because of the episode limit,
      the downloaded file is also deleted from disk. (BR 227674)
    * The visibility of columns in the new Files Browser is now configurable.
    * Toolbar: "Skip icons", prev/next labels are aligned to the edges
    * Volume Dial: Gradient indicator and pointing cursor hint above the dial ring
    * Playlist layout editor: When copying a layout, set its current name as
      the default one for the copy. Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Set Media Keys as default global shortcuts for playlist navigation.
      (BR 194259)
    * Deleting files from the File Browser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations can now be canceled. 
    * Port Copy/Move to Collection actions to the new File Browser.
    * Script-Updater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES: