@@ -14,6 +14,9 @@ VERSION 2.3.1-Beta 1
   CHANGES:
      * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
        and <trackfilename>.mood now work) 
+     * Change example SQL command for setting up an external database to remove
+       (sometimes incorrect) host name and possibly fix some random regression in
+       some MySQL versions. (BR 225052)
 
   BUGFIXES:
      * Cover fetcher: Fixed a crash involving reappearing cover found dialogs
